--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -1,91 +1,62 @@
+<div class="container-fluid">
 
-
-
-
-    <!-- # page-navigation -->
-    <nav class="navbar navbar-default"
-         role="navigation"
-         cam-tasklist-navigation>
-    </nav>
-    <!-- / page-navigation -->
-
-
-    <div class="container-fluid">
-      <div class="row controls">
-        <div notifications-panel
-             class="cols notifications-panel page-notifications"></div>
+  <div class="row controls">
+    <div class="cols col-sm-2 task-filters"
+         ng-controller="filterFormCtrl">
+      <div class="inner">
+        <h5>
+          <a href
+             ng-show="userCanCreateFilter"
+             ng-click="createFilter()">
+            New filter
+            <span class="glyphicon glyphicon-plus-sign"></span>
+          </a>
+        </h5>
       </div>
+
     </div>
 
-
-    <div class="container-fluid"
-         cam-if-logged-in>
-
-      <div ng-controller="camTasklistFilterCtrl">
-
-        <div class="row controls">
-          <div class="cols col-sm-2 task-filters"
-               ng-controller="filterFormCtrl">
-            <div class="inner">
-              <h5>
-                <a href
-                   ng-show="userCanCreateFilter"
-                   ng-click="createFilter()">
-                  New filter
-                  <span class="glyphicon glyphicon-plus-sign"></span>
-                </a>
-              </h5>
-            </div>
-
+    <div class="cols col-sm-4 current-filter">
+      <div class="inner">
+        <div class="row">
+          <div class="col-xs-12">
+          <!--
+          <div class="col-xs-6">
+            <h5>&nbsp;</h5>
           </div>
-
-          <div class="cols col-sm-4 current-filter">
-            <div class="inner">
-              <div class="row">
-                <div class="col-xs-12">
-                <!--
-                <div class="col-xs-6">
-                  <h5>&nbsp;</h5>
-                </div>
-                <div class="col-xs-6 dropdown sorting">
-                -->
-                  <div cam-sorting-choices
-                       filter-data="filterData"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="cols col-sm-6 current-task">
-            <div class="inner">
-              <h5>&nbsp;</h5>
-            </div>
-          </div>
-        </div>
-
-        <div class="row task-board">
-          <div class="cols col-sm-2 task-filters">
-            <div class="inner"
-                 cam-tasklist-filters
-                 filter-data="filterData"></div>
-          </div>
-
-          <div class="cols col-sm-4 task-list">
-            <div class="inner"
-                 cam-tasklist-filter-tasks
-                 filter-data="filterData"></div>
-          </div>
-
-          <div class="cols col-sm-6 current-task">
-            <div class="inner"
-                 cam-tasklist-task
-                 filter-data="filterData"></div>
+          <div class="col-xs-6 dropdown sorting">
+          -->
+            <div cam-sorting-choices
+                 tasklist-data="tasklistData"></div>
           </div>
         </div>
       </div>
     </div>
 
-    <div cam-if-logged-out
-         class="container-fluid"
-         cam-auth-login>
+    <div class="cols col-sm-6 current-task">
+      <div class="inner">
+        <h5>&nbsp;</h5>
+      </div>
     </div>
+  </div>
+
+  <div class="row task-board">
+    <div class="cols col-sm-2 task-filters">
+      <div class="inner"
+           cam-tasklist-filters
+           tasklist-data="tasklistData"></div>
+    </div>
+
+    <div class="cols col-sm-4 task-list">
+      <div class="inner"
+           cam-tasklist-filter-tasks
+           tasklist-data="tasklistData"></div>
+    </div>
+
+    <div class="cols col-sm-6 current-task">
+      <div class="inner"
+           cam-tasklist-task
+           tasklist-data="tasklistData"></div>
+    </div>
+  </div>
+</div>
