--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -28,8 +28,7 @@
       </div>
 
       <div cam-tasklist-task-meta
-           task-data="taskData"
-           filter-data="filterData"></div>
+           tasklist-data="tasklistData"></div>
 
     </div>
   </header>
@@ -38,7 +37,6 @@
        class="row tabbed-content">
     <div class="col-xs-12">
       <tabset>
-        <!-- <tab heading="{{ 'FORM' | translate }}"> -->
         <tab active="tabs.form"
              select="selectTab('form')">
           <tab-heading>
