fix(order): fix order of provided data

--- a/client/client/scripts/filter/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-tasks.html
@@ -98,7 +98,7 @@
 
 
 
-<pagination ng-show="totalItems > pageSize"
+<pagination ng-show="state.$loaded && totalItems > pageSize"
             total-items="totalItems"
             items-per-page="pageSize"
             max-size="5"
