feat(task variables): add task variables display
Related to: CAM-2607

--- a/client/client/scripts/filter/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-tasks.html
@@ -55,7 +55,7 @@
 
 
 
-        <ul class="list-inline">
+        <ul class="dates list-inline">
           <!--
           <li>
             <input type="checkbox"
@@ -91,6 +91,14 @@
                   am-time-ago="task.due">{{task.due}}</span>
           </li>
         </ul>
+
+
+
+        <div cam-tasklist-variables
+             ng-if="task._embedded.variable.length"
+             filter-properties="filterProperties"
+             variables="task._embedded.variable"
+             class="row variables" />
       </li>
     </ol>
   </form>
