refact(filter/modal): refactor the handling of filter modal dialog
related to CAM-2896

--- a/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
+++ b/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
@@ -127,7 +127,7 @@
         <div ng-if="hints.authorizations"
              class="task-filter-hint text-help">
           <span class="glyphicon glyphicon-info-sign"></span>
-          {{ hints.general }}
+          {{ hints.authorizations }}
         </div>
 
         <div class="form-group labels-left">
