--- a/client/client/scripts/task/directives/cam-tasklist-task-meta.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-meta.html
@@ -1,58 +1,81 @@
 <ul class="meta list-inline times">
-  <li cam-form-inline-field
-      class="followup-date"
-      ng-class="{overdue: task.followUp && (task.followUp < now) }"
-      type="datetime"
-      change="saveFollowUpDate(this)"
-      value="task.followUp">
 
-    <span tooltip-placement="top"
-          tooltip-append-to-body="true"
-          tooltip="{{ 'FOLLOW_UP_DATE' | translate }}"
-          class="glyphicon glyphicon-bell"></span>
+  <li>
 
-    <span ng-if="varValue"
-          tooltip-placement="top"
-          tooltip-append-to-body="true"
-          tooltip="{{ varValue | camDate:'long' }}"
-          am-time-ago="varValue">{{ varValue }}</span>
+    <span cam-form-inline-field
+          class="followup-date"
+          ng-class="{overdue: task.followUp && (task.followUp < now) }"
+          type="datetime"
+          change="saveFollowUpDate(this)"
+          on-start-editing="startEditingFollowUpDate(this)"
+          on-cancel-editing="cancelEditingFollowUpDate(this)"
+          value="task.followUp">
+      <span tooltip-placement="top"
+            tooltip-append-to-body="true"
+            tooltip="{{ 'FOLLOW_UP_DATE' | translate }}"
+            class="glyphicon glyphicon-bell"></span>
 
-    <a href
-       ng-if="!varValue"
-       translate="SET_FOLLOW_UP_DATE">Set follow up</a>
-  </li>
-
-
-
-  <li cam-form-inline-field
-      class="due-date"
-      ng-class="{overdue: task.due && (task.due < now) }"
-      type="datetime"
-      change="saveDueDate(this)"
-      value="task.due">
-    <span tooltip-placement="top"
-          tooltip-append-to-body="true"
-          tooltip="{{ 'DUE_DATE' | translate }}"
-          class="glyphicon glyphicon-calendar"></span>
-
-    <span ng-if="varValue"
-          tooltip-placement="top"
-          tooltip-append-to-body="true"
-          tooltip="{{ varValue | camDate:'long' }}"
-          am-time-ago="varValue">{{ varValue }}</span>
+      <span ng-if="varValue"
+            tooltip-placement="top"
+            tooltip-append-to-body="true"
+            tooltip="{{ varValue | camDate:'long' }}"
+            am-time-ago="varValue">{{ varValue }}</span>
+      <a href
+         ng-if="!varValue"
+         translate="SET_FOLLOW_UP_DATE">Set follow up</a>
+    </span>
 
     <a href
-       ng-if="!varValue"
-       translate="SET_DUE_DATE">Set due date</a>
+       ng-if="task.followUp && !editingState.followUp"
+       tooltip-placement="top"
+       tooltip="{{ 'RESET_FOLLOW_UP_DATE' | translate }}"
+       ng-click="resetFollowUpDate()"
+       class="reset-follow-up-date glyphicon glyphicon-remove">
+    </a>
+
   </li>
+
+  <li>
+
+    <span cam-form-inline-field
+          class="due-date"
+          ng-class="{overdue: task.due && (task.due < now) }"
+          type="datetime"
+          change="saveDueDate(this)"
+          on-start-editing="startEditingDueDate(this)"
+          on-cancel-editing="cancelEditingDueDate(this)"
+          value="task.due">
+
+      <span tooltip-placement="top"
+            tooltip-append-to-body="true"
+            tooltip="{{ 'DUE_DATE' | translate }}"
+            class="glyphicon glyphicon-calendar"></span>
+
+      <span ng-if="varValue"
+            tooltip-placement="top"
+            tooltip-append-to-body="true"
+            tooltip="{{ varValue | camDate:'long' }}"
+            am-time-ago="varValue">{{ varValue }}</span>
+
+      <a href
+         ng-if="!varValue"
+         translate="SET_DUE_DATE">Set due date</a>
+    </span>
+
+    <a href
+       ng-if="task.due && !editingState.due"
+       tooltip-placement="top"
+       tooltip="{{ 'RESET_DUE_DATE' | translate }}"
+       ng-click="resetDueDate()"
+       class="reset-due-date glyphicon glyphicon-remove">
+    </a>
+
+  </li>
+
 </ul>
 
-
-
-
-
-
 <ul class="meta list-inline actors">
+
   <li class="assignee set-value"
       ng-if="!task.assignee">
     <span tooltip-placement="top"
@@ -65,36 +88,16 @@
        translate="CLAIM_TASK">Claim</a>
   </li>
 
-
-
-
-
   <li class="assignee"
-      ng-if="task.assignee && !userIsAssignee()"
-      cam-form-inline-field
-      type="text"
-      validate="validateUser(this)"
-      change="assigning(this)"
-      value="task.assignee">
+      ng-if="task.assignee">
 
-    <span tooltip-placement="top"
-          tooltip="{{ 'ASSIGNEE' | translate }}"
-          class="glyphicon glyphicon-user"></span>
-
-    {{ varValue }}
-  </li>
-
-
-
-
-
-  <li class="assignee"
-      ng-if="userIsAssignee()">
     <span cam-form-inline-field
           class="set-value"
           type="text"
           validate="validateUser(this)"
-          change="assigning(this)"
+          change="assign(this)"
+          on-start-editing="startEditingAssignee(this)"
+          on-cancel-editing="cancelEditingAssignee(this)"
           value="task.assignee">
 
       <span tooltip-placement="top"
@@ -105,11 +108,21 @@
     </span>
 
     <a href
+       ng-if="isAssignee && !editingState.assignee"
        tooltip-placement="top"
        tooltip="{{ 'UNCLAIM_TASK' | translate }}"
        ng-click="unclaim()"
        class="unclaim glyphicon glyphicon-remove">
     </a>
+
+    <a href
+       ng-if="!isAssignee && !editingState.assignee"
+       tooltip-placement="top"
+       tooltip="{{ 'RESET_TASK_ASSIGNEE' | translate }}"
+       ng-click="resetAssignee()"
+       class="reset-assignee glyphicon glyphicon-remove">
+    </a>
+
   </li>
 
 </ul>
