chore(task/history): show task history

--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -61,7 +61,7 @@
              heading="{{ 'HISTORY' | translate }}">
           <div class="history-pane"
                cam-tasklist-task-history
-               task="task">
+               task-data="taskData">
           </div>
         </tab>
 
@@ -70,7 +70,7 @@
              select="selectTab('diagram')">
           <div class="diagram-pane"
                cam-tasklist-task-diagram
-               task="task">
+               task-data="taskData">
           </div>
         </tab>
 
