impr(layout): work on visual feedback of selected elements

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -39,15 +39,14 @@
   <!-- / page-navigation -->
 
   <div class="page-wrap" >
-    <div class="container-fluid">
-      <div class="row controls">
-        <div notifications-panel
-             class="cols notifications-panel page-notifications"></div>
-      </div>
+    <div class="row controls">
+      <div notifications-panel
+           class="cols notifications-panel page-notifications"></div>
     </div>
 
-    <div ng-view>
-    </div>
+
+    <div ng-view
+         class="ui-wrap"></div>
 
   </div>
 
