--- a/client/client/scripts/navigation/directives/cam-sorting-choices.html
+++ b/client/client/scripts/navigation/directives/cam-sorting-choices.html
@@ -4,7 +4,8 @@
      role="button"
      class="dropdown-toggle"
      data-toggle="dropdown">
-    {{ 'SORT_BY' | translate }}
+    <span class="hidden-xs hidden-sm hidden-md"
+          translate="SORT_BY"></span>
     <span class="sort-by">{{ byLabel | lowercase }}</span>
   </a>
 
