--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -18,13 +18,13 @@
        ng-style="{'z-index': ((filters.length + 10) - delta) }">
 
     <div class="task-filter"
-         ng-style="filter.style">
+         ng-style="filter.style"
+         ng-click="focus(filter)">
 
       <div ng-if="isFocused(filter)"
         class="counter">{{ filterCount }}</div>
 
-      <h4 class="name"
-          ng-click="focus(filter)">{{ filter.name }}</h4>
+      <h4 class="name">{{ filter.name }}</h4>
 
       <div class="info"
            ng-style="filter.style">
