fix(task/comment): observe task inside controller

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -34,7 +34,7 @@
     <div class="inner">
       <h5>
         <a href
-           ng-click="createComment(task)">
+           ng-click="createComment()">
           {{ 'COMMENT_CREATE' | translate }}
           <span class="glyphicon glyphicon-plus-sign"></span>
         </a>
