impr(task/comment): add comment is possible when a task is selected

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -31,7 +31,7 @@
 
   <div class="cols col-sm-6 current-task"
        ng-controller="commentFormCtrl">
-    <div class="inner">
+    <div class="inner" ng-show="task">
       <h5>
         <a href
            ng-click="createComment()">
