chore(variable/modal): close variable modal dialog on location change

--- a/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
@@ -28,7 +28,7 @@
     <div class="col-xs-12">
       <button class="btn btn-primary"
               type="submit"
-              ng-click="close()"
+              ng-click="$dismiss()"
               translate="CLOSE">Close</button>
     </div>
   </div>
