impr(search): add calendar to search value field
this commit also includes styling of the group inline edit field

related to CAM-2756

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -57,6 +57,13 @@
   <span class="btn-group" ng-if="varType !== 'option'">
     <button type="button"
             class="btn btn-xs btn-default"
+            ng-click="changeType()"
+            ng-if="flexible">
+      <span class="glyphicon glyphicon-calendar"></span>
+    </button>
+
+    <button type="button"
+            class="btn btn-xs btn-default"
             ng-click="applyChange()">
       <span class="glyphicon glyphicon-ok"></span>
     </button>
