--- a/client/client/scripts/navigation/directives/cam-task-search.html
+++ b/client/client/scripts/navigation/directives/cam-task-search.html
@@ -55,7 +55,8 @@
               class="set-value"
               type="text"
               change="changeSearch($index, 'value', varValue)"
-              value="search.value">
+              value="search.value"
+              flexible="true">
           <span tooltip-placement="top"
             tooltip="{{'VALUE' | translate}}">
               {{ varValue | queryComponent }}
